# devsim

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
hw/: arbiter.sv  cmd_parser.sv  common.sv  cpu.sv  cpu_alu.sv  cpu_decode.sv  cpu_inst_fetch.sv  cpu_mem.sv  cpu_regfile.sv  fifo.v  mem.v  top.sv
src/: device.rs  lib.rs  main.rs  protobridge.rs  vkutil.rs
src/shaders/: CopyTexture.frag  FullscreenPass.vert  ImguiTriangle.frag  ImguiTriangle.vert  pipelineLayout.json
