[package]
name = "devsim"
version = "0.1.0"
authors = ["Gregory Mitrano <gregory.mitrano@gmail.com>"]
edition = "2018"
default-run = "view"

[dependencies]
ash                 = "0.31"
ash-window          = "0.5"
clap                = "3.0.0-beta.2"
goblin              = "0.2"
imgui               = "0.5"
imgui-winit-support = "0.5"
pbr                 = "1"
shaderc             = "0.6"
vk-mem              = "0.2"
winit               = "0.22"
vkutil = { path = "../vkutil" }

[dependencies.image]
default-features = false
features = ["png"]
version = "0.23"

[build-dependencies]
cmake = "0.1"
